tests/baselines/reference/FunctionDeclaration10_es6.errors.txt
FunctionDeclaration10_es6.ts(1,20): error TS2523: 'yield' expressions cannot be used in a parameter initializer.
FunctionDeclaration10_es6.ts(1,26): error TS1005: ',' expected.


==== FunctionDeclaration10_es6.ts (2 errors) ====
    function * foo(a = yield => yield) {
                       ~~~~~
!!! error TS2523: 'yield' expressions cannot be used in a parameter initializer.
                             ~~
!!! error TS1005: ',' expected.
    }